# mbw_audit

./: API_DESCRIPTION.txt  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
frontend/: .env.production  index.html  package-lock.json  package.json  proxyOptions.js  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1706170668721-eebd25d65ce24.mjs
frontend/public/data_sample/: campaign_sample.xlsx
frontend/public/vgm_project/assets/: CampaignCreate-ttQf2_Hf.js  EditOutlined-WDPL9wnr.js  RouterCreate-OqUHdw-a.js  main-ZqBQIJMP.js  main-kl2YzmiT.css
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/auth/: AuthProvider.tsx
frontend/src/components/: index.ts
frontend/src/components/form-item/: index.ts  (+1 more)
frontend/src/hooks/: index.ts  useCookie.ts
frontend/src/icons/: index.ts  list.tsx  map.tsx  thunder.tsx  type.ts
frontend/src/pages/: Campaign.tsx  CampaignCreate.tsx  DemoImage.tsx  RouteReportDetail.tsx  RouteReportView.tsx  RouterControl.tsx  RouterCreate.tsx  RouterDashboard.tsx  RouterDetail.tsx  RouterEmployee.tsx  RouterProduct_SKU.tsx  SettingDMS.tsx
frontend/src/routes/: index.ts  path.ts
frontend/src/services/: server.ts
frontend/src/themes/: token.ts
frontend/src/types/: employeeFilter.ts  listSale.ts  response.ts  user.ts
mbw_audit/: hooks.py  modules.txt
mbw_audit/api/: api.py  common.py
mbw_audit/public/frontend/: index.html
mbw_audit/public/mbw_audit/: index.html
mbw_audit/utils/: appconst.py
mbw_audit/www/frontend/: index.html
mbw_audit/www/mbw_audit/: index.html
(+836 files in other folders)
