[project]
name = "mbw_audit"
authors = [
    { name = "mbw", email = "ekgis@gmail.com"}
]
description = "mbw audit"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "deepvision_python_sdk @ git+https://bugs.ekgis.vn/deepvision/deepvision_python_sdk.git@master",
    "pyarrow",
    "urllib3~=1.26.15",
    "requests-toolbelt~=0.10.1",
    "opencv-python-headless",
    "pysqlite3-binary",
    "chromadb"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
